KUBERNETES/manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: weighttracker 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: weighttracker
  template:
    metadata:
      labels:
        app: weighttracker 
    spec:
      containers:
        - name: weighttracker 
          image: mosheconregistry.azurecr.io/myrepo
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
